--- a/helpdesk/fixtures/website_settings.json
+++ b/helpdesk/fixtures/website_settings.json
@@ -3,8 +3,8 @@
   "address": null, 
   "banner_html": null, 
   "banner_image": null, 
-  "brand_html": "New Indictranstech", 
-  "copyright": "New Indictranstech", 
+  "brand_html": "Jalgaon Jilha Bank", 
+  "copyright": "Jalgaon Jilha Bank", 
   "disable_signup": 0, 
   "docstatus": 0, 
   "doctype": "Website Settings", 
@@ -15,10 +15,10 @@
   "google_plus_one": 0, 
   "head_html": null, 
   "hide_footer_signup": 0, 
-  "home_page": "new-indictranstech", 
+  "home_page": "jalgaon-jilha-bank", 
   "home_page_is_products": 0, 
   "linked_in_share": 0, 
-  "modified": "2016-06-23 12:57:09.165571", 
+  "modified": "2016-11-11 17:52:17.212441", 
   "name": "Website Settings", 
   "sidebar_items": [], 
   "subdomain": null, 
