--- a/helpdesk/fixtures/website_settings.json
+++ b/helpdesk/fixtures/website_settings.json
@@ -3,8 +3,8 @@
   "address": null, 
   "banner_html": null, 
   "banner_image": null, 
-  "brand_html": "Jalgaon Jilha Bank", 
-  "copyright": "Jalgaon Jilha Bank", 
+  "brand_html": "Jalgaon Janata Sahkari Bank Ltd.", 
+  "copyright": "Jalgaon Janata Sahkari Bank Ltd.", 
   "disable_signup": 0, 
   "docstatus": 0, 
   "doctype": "Website Settings", 
@@ -18,7 +18,7 @@
   "home_page": "jalgaon-jilha-bank", 
   "home_page_is_products": 0, 
   "linked_in_share": 0, 
-  "modified": "2016-11-11 17:52:17.212441", 
+  "modified": "2016-11-28 09:58:37.089421", 
   "name": "Website Settings", 
   "sidebar_items": [], 
   "subdomain": null, 
